2010-06-18  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Adam Barth.

        Tests that we do not crash while rendering a fixed table layout.
        https://bugs.webkit.org/show_bug.cgi?id=40812

        * fast/table/zero-colspan-crash-expected.txt: Added.
        * fast/table/zero-colspan-crash.html: Added.

2010-06-18  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoffrey Garen.

        Incorrect handling of multiple BOMs scattered through a file.
        https://bugs.webkit.org/show_bug.cgi?id=40865

        Put a few more BOMs into this testcase so that it hits the other cases
        that were missed before.

        * fast/js/resources/bom-in-file-retains-correct-offset.js:
        (g.f):
        (g):

2010-06-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, expectations update.

        Update a few more chromium-win baselines after http://trac.webkit.org/changeset/61393.

2010-06-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, expectations update.

        Update a few more chromium-mac baselines after http://trac.webkit.org/changeset/61393.

2010-06-18  Martin Robinson  <mrobinson@igalia.com>

        Unreviewed.

        Skipped some failing tests and conglomerated a skipped test into another group.

        * platform/gtk/Skipped: Cleanups and three more skipped tests.

2010-06-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, expectations update.

        Update chromium baselines after http://trac.webkit.org/changeset/61418.

2010-06-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, expectations update.

        Update chromium-linux baselines after http://trac.webkit.org/changeset/61393.

2010-06-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, expectations update.

        Update chromium-win baselines after http://trac.webkit.org/changeset/61393.

2010-06-18  Martin Robinson  <mrobinson@igalia.com>

        Unreviewed.
