@@ -1,0 +1,3 @@
+Test for bug 19759: ChildNodeList for an attribute node is not properly invalidated after appending a child.
+
+Passed!!
